fix overlapping line background with captions

--- a/css/article-img.css
+++ b/css/article-img.css
@@ -75,6 +75,7 @@
     z-index: 100;
     background: #000;
     padding: 9px 15px;
+    line-height: 1.7;
 }
 .imgCaptionPre, .imgCaptionPost {
     height: 15px;
